--- a/pages/about.html
+++ b/pages/about.html
@@ -3,25 +3,26 @@
 <head>
 
 </head>
-<body dir=rtl">
+<body dir="rtl">
+<header> </header>
     <font face="calibri">
      <h1 class="heading-title">אודות מתחפשים בפורים</h1>
     </font>
- <main>
+ 
  <font face="calibri">
-        <h6>  "על שלושה דברים העולם עומד על התורה, ועל העבודה, ועל <b> גמילות חסדים </b>" (פרקי אבות, משנה ב')    </h6>   
+        <font size="6" color=#006699>  "על שלושה דברים העולם עומד על התורה, ועל העבודה, ועל <b> גמילות חסדים</b>" (פרקי אבות, משנה ב')    </font>
        <span style="color: rgb(0, 153, 204)">
-        <h4> על הארגון: </h4>
+        <h1> על הארגון: </h1>
         </span>
         <p>ארגון "מתחפשים בפורים" הינו ארגון צדקה, שנוסד על ידי ###, המשמש עד היום כיושב ראש הארגון.     </p>
         <p>הארגון הינו ארגון צדקה, שכל הכנסותיו ילכו למתן צדקה לעניים, בנוסף לאפשרות להשאלת תחפושות לחג הפורים במחירים נמוכים ואפשריים לכל בית בישראל.        </p>
         <p>הארגון מתבסס כולו על תרומות של תחפושות של אנשים נדיבים, כמו גם תרומות ישירות לארגון, והשאלת תחפושות.     </p>
          <span style="color: rgb(0, 153, 204)">
-        <h4>החזון:     </h4>
+        <h1>החזון:     </h1>
         </span>
         <p>לכל ילד בישראל תהיה תחפושות בחג הפורים, כמו גם ארוחה חמה ואפשרות לחיים טובים יותר.       </p>
         <span style="color: rgb(0, 153, 204)">
-        <h4>כתובת ושעות פעילות:      </h4>
+        <h1>כתובת ושעות פעילות:      </h1>
         </span>
         <p><a> ###,%%%,$$$ </a>
         <li>בימים א-ה: 9:00-18:00        </li>
@@ -30,6 +31,7 @@
         <p>מענה טלפוני 24 שעות ביממה </p>
   </p>
      </font>
- </main>
+<footer> </footer>
+
 </body>
 </html>
