--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,20 @@
 
 </head>
 <body dir="rtl">
-<header> </header>
+<header>
+ <div>
+  <nav>
+   <ul>
+    <font face="calibri">
+   <a href="home.html">דף בית</a>&nbsp;&nbsp;&nbsp;
+    <a href="#">קטלוג</a>&nbsp;&nbsp;&nbsp;
+     <a href="login.html">כניסה</a>&nbsp;&nbsp;&nbsp;
+    <a href="about.html">אודות</a>
+    </font>
+   </ul>
+  </nav>
+ </div>
+</header>
     <font face="calibri">
      <h1 class="heading-title">אודות מתחפשים בפורים</h1>
     </font>
@@ -31,7 +44,15 @@
         <p>מענה טלפוני 24 שעות ביממה </p>
   </p>
      </font>
-<footer> </footer>
 
 </body>
+<footer>
+ <font face="calibri">
+ <li><a href="#l">חשבון</a></li>
+ <li><a href="#">תקנון האתר</a></li>
+ <li><a href="#">מדיניות פרטיות</a></li>
+ <li><a href="#">צרו קשר</a></li>
+ <li><a href="about.html">אודות</a></li>
+ </font>
+</footer>
 </html>
