--- a/pages/about.html
+++ b/pages/about.html
@@ -46,13 +46,14 @@
      </font>
 
 </body>
-<footer>
+ <ul type="circle">
  <font face="calibri">
- <li><a href="#l">חשבון</a></li>
+ <li><a href="#l">חשבון</a></type>
  <li><a href="#">תקנון האתר</a></li>
  <li><a href="#">מדיניות פרטיות</a></li>
  <li><a href="#">צרו קשר</a></li>
  <li><a href="about.html">אודות</a></li>
  </font>
+</ul>
 </footer>
 </html>
