--- a/pages/about.html
+++ b/pages/about.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>אודות "מתחפשים בפורים"</title>
+<link rel="icon" href="/../../../'סמסטר ה/WEB/Fatcow-Farm-Fresh-Private.ico"/>
 </head>
 <body dir="rtl">
 <header>
@@ -44,8 +45,8 @@
         <p>מענה טלפוני 24 שעות ביממה </p>
   </p>
      </font>
-
 </body>
+<footer dir="ltr"
  <ul type="circle">
  <font face="calibri">
  <li><a href="#l">חשבון</a></type>
