--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,7 @@
 <title>אודות "מתחפשים בפורים"</title>
 <link rel="icon" href="/../../../'סמסטר ה/WEB/Fatcow-Farm-Fresh-Private.ico"/>
 </head>
-<body dir="rtl">
+<body dir="rtl" bgcolor="#d1eaff">
 <header>
  <div>
   <nav>
