--- a/pages/about.html
+++ b/pages/about.html
@@ -4,22 +4,32 @@
 <title>אודות "מתחפשים בפורים"</title>
 <link rel="icon" href="/../../../'סמסטר ה/WEB/Fatcow-Farm-Fresh-Private.ico"/>
 </head>
-<body dir="rtl" bgcolor="#d1eaff">
+<body dir="rtl" bgcolor="#edf4ff">
 <header>
  <div>
   <nav>
-   <ul>
+   <ul dir="ltr">
     <font face="calibri">
-   <a href="home.html">דף בית</a>&nbsp;&nbsp;&nbsp;
-    <a href="#">קטלוג</a>&nbsp;&nbsp;&nbsp;
-     <a href="login.html">כניסה</a>&nbsp;&nbsp;&nbsp;
+   <a href="home.html">דף הבית</a>&nbsp;&nbsp;&nbsp;
+    <a href="#">קטלוג</a>&nbsp;&nbsp;&nbsp;&nbsp;
+     <a href="login.html">כניסה</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <a href="about.html">אודות</a>
     </font>
    </ul>
   </nav>
  </div>
+    <font face="calibri">
+    <form action="search">חיפוש: <input type="text" name="חיפוש">
+        <input type="submit" value="חפש">
+    </form>
+    </font>
 </header>
     <font face="calibri">
+        <div class="Breadcrumbs" id="Breadcrumbs">
+            <a href="home.html">דף הבית</a>
+            »
+            <span class="Breadcrumbs_last">אודות מתחפשים בפורים</span>
+        </div>
      <h1 class="heading-title">אודות מתחפשים בפורים</h1>
     </font>
  
@@ -46,14 +56,11 @@
   </p>
      </font>
 </body>
-<footer dir="ltr"
+<footer>
  <ul type="circle">
  <font face="calibri">
- <li><a href="#l">חשבון</a></type>
- <li><a href="#">תקנון האתר</a></li>
- <li><a href="#">מדיניות פרטיות</a></li>
- <li><a href="#">צרו קשר</a></li>
- <li><a href="about.html">אודות</a></li>
+ <div dir="ltr"> <li ><a href="#" >צרו קשר</a></li></div>
+ <li ><a href="about.html" dir="rtl">אודות</a></li>
  </font>
 </ul>
 </footer>
