--- a/pages/about.html
+++ b/pages/about.html
@@ -25,11 +25,14 @@
     </font>
 </header>
     <font face="calibri">
+      <p>
         <div class="Breadcrumbs" id="Breadcrumbs">
             <a href="home.html">דף הבית</a>
             »
             <span class="Breadcrumbs_last">אודות מתחפשים בפורים</span>
         </div>
+    </p>
+    </font>
      <h1 class="heading-title">אודות מתחפשים בפורים</h1>
     </font>
  
