--- a/pages/about.html
+++ b/pages/about.html
@@ -42,9 +42,11 @@
        <span style="color: rgb(0, 153, 204)">
         <h1> על הארגון: </h1>
         </span>
+        <div class="Descrition">
         <p>ארגון "מתחפשים בפורים" הינו ארגון צדקה, שנוסד על ידי ###, המשמש עד היום כיושב ראש הארגון.     </p>
         <p>הארגון הינו ארגון צדקה, שכל הכנסותיו ילכו למתן צדקה לעניים, בנוסף לאפשרות להשאלת תחפושות לחג הפורים במחירים נמוכים ואפשריים לכל בית בישראל.        </p>
         <p>הארגון מתבסס כולו על תרומות של תחפושות של אנשים נדיבים, כמו גם תרומות ישירות לארגון, והשאלת תחפושות.     </p>
+        </div>
          <span style="color: rgb(0, 153, 204)">
         <h1>החזון:     </h1>
         </span>
