--- a/pages/about.html
+++ b/pages/about.html
@@ -10,10 +10,10 @@
   <nav>
    <ul dir="ltr">
     <font face="calibri">
-   <a href="home.html">דף הבית</a>&nbsp;&nbsp;&nbsp;
-    <a href="#">קטלוג</a>&nbsp;&nbsp;&nbsp;&nbsp;
-     <a href="login.html">כניסה</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="about.html">אודות</a>
+   <a id="homePageLink" href="home.html">דף הבית</a>&nbsp;&nbsp;&nbsp;
+    <a id="catalogPageLink" href="catalog.html">קטלוג</a>&nbsp;&nbsp;&nbsp;&nbsp;
+     <a id="loginPageLink" href="login.html">כניסה</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a id="aboutPageLink" href="about.html">אודות</a>
     </font>
    </ul>
   </nav>
