--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -10,25 +10,20 @@
     <div>
         <nav>
             <ul dir="ltr">
-                <font face="calibri">
                     <a id="homepage-link" href="../../index.html">דף הבית</a>&nbsp;&nbsp;&nbsp;
                     <a id="catalog-page-link" href="../catalog/catalog.html">קטלוג</a>&nbsp;&nbsp;&nbsp;&nbsp;
                     <a id="login-page-link" href="../login/login.html">כניסה</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <a id="about-page-link" href="about.html">אודות</a>
-                </font>
             </ul>
         </nav>
     </div>
-    <font face="calibri">
         <form method="GET" action="">
             <label for="search-field">חיפוש:</label><input id="search-field" type="text" name="חיפוש">
             <input type="submit" value="חפש">
         </form>
-    </font>
     <hr/>
 </header>
 <main>
-    <font face="calibri">
         <p>
         <div class="Breadcrumbs" id="Breadcrumbs">
             <a href="../../index.html">דף הבית</a>
@@ -36,13 +31,13 @@
             <span class="Breadcrumbs_last">אודות מתחפשים בפורים</span>
         </div>
         </p>
-    </font>
+
     <h1 class="heading-title">אודות מתחפשים בפורים</h1>
-    </font>
+   
     
-    <font face="calibri">
-        <font size="5" color=#006699> "על שלושה דברים העולם עומד: על התורה, ועל העבודה, ועל <b> גמילות חסדים</b>" (פרקי
-            אבות, משנה ב') </font>
+   
+         "על שלושה דברים העולם עומד: על התורה, ועל העבודה, ועל <b> גמילות חסדים</b>" (פרקי
+            אבות, משנה ב')
         <span style="color: rgb(0, 153, 204)">
         <h1> על הארגון: </h1>
         </span>
@@ -69,10 +64,10 @@
 </main>
 <footer>
     <ul type="circle">
-        <font face="calibri">
+
             <li><a href="#">צרו קשר</a></li>
             <li><a href="about.html" dir="rtl">אודות</a></li>
-        </font>
+     
     </ul>
 </footer>
 </body>
