--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8"/>
     <title>אודות "מתחפשים בפורים"</title>
-    <link rel="icon" href="/../../../'סמסטר ה/WEB/Fatcow-Farm-Fresh-Private.ico"/>
+    <link rel="stylesheet" href="../total.css">
 </head>
-<body dir="rtl" bgcolor="#edf4ff">
+<body dir="rtl">
 <header>
     <div>
         <nav>
-            <ul dir="ltr">
+            <ul dir="rtl">
                     <a id="homepage-link" href="../../index.html">דף הבית</a>&nbsp;&nbsp;&nbsp;
                     <a id="catalog-page-link" href="../catalog/catalog.html">קטלוג</a>&nbsp;&nbsp;&nbsp;&nbsp;
                     <a id="login-page-link" href="../login/login.html">כניסה</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -18,7 +18,7 @@
         </nav>
     </div>
         <form method="GET" action="">
-            <label for="search-field">חיפוש:</label><input id="search-field" type="text" name="חיפוש">
+            <label for="search-field"></label><input id="search-field" type="text" name="חיפוש" placeholder="חיפוש">
             <input type="submit" value="חפש">
         </form>
     <hr/>
@@ -38,7 +38,7 @@
    
          "על שלושה דברים העולם עומד: על התורה, ועל העבודה, ועל <b> גמילות חסדים</b>" (פרקי
             אבות, משנה ב')
-        <span style="color: rgb(0, 153, 204)">
+        <span >
         <h1> על הארגון: </h1>
         </span>
         <div class="decription">
@@ -47,11 +47,11 @@
                 במחירים נמוכים ואפשריים לכל בית בישראל. </p>
             <p>הארגון מתבסס כולו על תרומות של תחפושות של אנשים נדיבים, כמו גם תרומות ישירות לארגון, והשאלת תחפושות. </p>
         </div>
-        <div style="color: rgb(0, 153, 204)">
+        <div>
             <h1>החזון:     </h1>
         </div>
         <p>לכל ילד בישראל תהיה תחפושות בחג הפורים, כמו גם ארוחה חמה ואפשרות לחיים טובים יותר. </p>
-        <div style="color: rgb(0, 153, 204)">
+        <div>
             <h1>כתובת ושעות פעילות:      </h1>
         </div>
         <p><a> ###,%%%,$$$ </a>
