--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>התחברות</title>
+    <link rel="stylesheet" href="../total.css">
+    <link rel="stylesheet" href="login.css">
 </head>
-<body>
+<body dir="rtl">
     <form method="get" action="">
-        שם משתמש:  <input type="text" name="name"><br>
-        סיסמה: <input type=int name="password"><br>
-        <input type="submit" value="התחבר">
+          <input type="text" name="name" placeholder="שם משתמש"><br>
+          <input type=int name="password" placeholder="סיסמה"><br>
+        <input type="submit" value="התחבר" id="push" >
     </form>
 
 </body>
