--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>אודות "מתחפשים בפורים"</title>
-    <link rel="stylesheet" href="../total.css">
+    <link rel="stylesheet" href="../../css/total.css">
 </head>
 <body dir="rtl">
 <header>
@@ -17,11 +17,10 @@
             </ul>
         </nav>
     </div>
-        <form method="GET" action="">
+        <form method="GET" action="" class="search">
             <label for="search-field"></label><input id="search-field" type="text" name="חיפוש" placeholder="חיפוש">
             <input type="submit" value="חפש">
         </form>
-    <hr/>
 </header>
 <main>
         <p>
