--- a/project web/untitled2/pages/Product/DSLR.html
+++ b/project web/untitled2/pages/Product/DSLR.html
@@ -82,7 +82,7 @@
     <br>
     Please notice that this is the digital type of a camera.
     <br>
-    Brief learning beforehand is recommended.
+    Brief learning beforehand is recommended!
 </p>
 <p>
     <button class="buy">
