--- a/project web/untitled2/pages/About/About.html
+++ b/project web/untitled2/pages/About/About.html
@@ -47,19 +47,20 @@
     <div class="topnav">
         <ul>
             <li><a  href="#home">Home</a></li>
-            <li><a href="#Catalog">Catalog</a> </li>
+            <li><a href="http://localhost:63342/web/project%20web/untitled2/pages/Catalog/Catalog.html?_ijt=3jsrhoebi5rr8vpjcqvmikc7gb  ">Catalog</a> </li>
             <li><a href="http://www.canonoutsideofauto.ca/play/">Exposure Meter Simulator</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a class="active" href="#about">About</a></li>
+            <li><a class="active" href="http://localhost:63342/web/project%20web/untitled2/pages/About/About.html?_ijt=3jsrhoebi5rr8vpjcqvmikc7gb ">About</a></li>
             
-            <div class="login-container">
-                <form action="/action_page.php">
-                    <input type="text" placeholder="Username" name="username">
-                    <input type="text" placeholder="Password" name="psw">
-                    <button class="login" type="submit">Login</button>
-                </form>
-            </div>
+            
         </ul>
+    </div>
+    <div class="login-container">
+        <form action="/action_page.php">
+            <input type="text" placeholder="Username" name="username">
+            <input type="text" placeholder="Password" name="psw">
+            <button class="login" type="submit">Login</button>
+        </form>
     </div>
     <h1 class="h1">
         Photo Op
