--- a/project web/untitled2/pages/Home/Home.html
+++ b/project web/untitled2/pages/Home/Home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   
     <meta charset="UTF-8">
     <meta name="Photo Op" content="Photography">
     <meta name="keywords" content="DSLR,Camera,Photo,Painting with light">
@@ -39,22 +40,48 @@
     <link rel="stylesheet" href="../total.css">
 </head>
 <body>
-<div class="topnav">
-    <ul>
-        <li><a class="active" href="Home.html">Home</a></li>
-        <li><a href="Catalog.html">Catalog</a> </li>
-        <li><a href="http://www.canonoutsideofauto.ca/play/">Exposure Meter Simulator</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="#about">About</a></li>
+<header>
+    <div class="topnav">
+        <ul>
+            <li><a class="active" href="http://localhost:63342/web/project%20web/untitled2/pages/Home/Home.html?_ijt=k5hlpb6ckroc5hf5jsr00f7ft9 ">Home</a></li>
+            <li><a href="http://localhost:63342/web/project%20web/untitled2/pages/Catalog/Catalog.html?_ijt=3jsrhoebi5rr8vpjcqvmikc7gb  ">Catalog</a> </li>
+            <li><a href="http://www.canonoutsideofauto.ca/play/">Exposure Meter Simulator</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="http://localhost:63342/web/project%20web/untitled2/pages/About/About.html?_ijt=3jsrhoebi5rr8vpjcqvmikc7gb ">About</a></li>
         
-        <div class="login-container">
-            <form action="/action_page.php">
-                <input type="text" placeholder="Username" name="username">
-                <input type="text" placeholder="Password" name="psw">
-                <button class="login" type="submit">Login</button>
-            </form>
-        </div>
-    </ul>
-</div>
+        
+        </ul>
+    </div>
+    <div class="login-container">
+        <form action="/action_page.php">
+            <input type="text" placeholder="Username" name="username">
+            <input type="text" placeholder="Password" name="psw">
+            <button class="login" type="submit">Login</button>
+        </form>
+    </div>
+    <h1 class="h1">
+        Photo Op
+        <hr class="h1"/>
+    </h1>
+    <form method="GET" action="" class="search">
+        <label for="search-field"></label><input id="search-field" type="text" name="Search" placeholder="Search">
+        <input type="submit" value="Search" class="search">
+    </form>
+</header>
+<main>
+    <p>
+    <div class="Breadcrumbs" id="Breadcrumbs">
+        <a href="../../index.html">Home</a>
+        »
+        <a href="About.html">About</a>
+    </div>
+    </p>
+   
+</main>
+<footer>
+    <div class="footer">
+        <a href="Contact.html">Contact</a>
+    </div>
+</footer>
 </body>
 </html>
