--- a/project web/untitled2/pages/Product/SLR.html
+++ b/project web/untitled2/pages/Product/SLR.html
@@ -40,7 +40,7 @@
 <header>
     <div class="topnav">
         <ul>
-            <li><a  href="#home">Home</a></li>
+            <li><a href="http://localhost:63342/web/project%20web/untitled2/pages/Home/Home.html?_ijt=k5hlpb6ckroc5hf5jsr00f7ft9">Home</a></li>
             <li><a class="active" href="http://localhost:63342/web/project%20web/untitled2/pages/Catalog/Catalog.html?_ijt=3jsrhoebi5rr8vpjcqvmikc7gb">Catalog</a> </li>
             <li><a href="http://www.canonoutsideofauto.ca/play/">Exposure Meter Simulator</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -66,6 +66,13 @@
     </form>
 </header>
 <main>
+    <p>
+    <div class="Breadcrumbs" id="Breadcrumbs">
+        <a href="../../index.html">Home</a>
+        »
+        <a href="About.html">About</a>
+    </div>
+    </p>
 <p class="prodName" style="left: 38%">
      Single Lense Reflex
 </p>
