--- a/project web/untitled2/pages/Home/Home.html
+++ b/project web/untitled2/pages/Home/Home.html
@@ -6,7 +6,7 @@
     <meta name="Photo Op" content="Photography">
     <meta name="keywords" content="DSLR,Camera,Photo,Painting with light">
     <meta name="author" content="Amit Nachmias">
-    <title>Home</title>
+    <title>Home-Photo Op</title>
     <style>
         ul {
             list-style-type: none;
@@ -61,21 +61,16 @@
     </div>
     <h1 class="h1">
         Photo Op
-        <hr class="h1"/>
     </h1>
+    <br><br><br>
+    <hr>
     <form method="GET" action="" class="search">
         <label for="search-field"></label><input id="search-field" type="text" name="Search" placeholder="Search">
         <input type="submit" value="Search" class="search">
     </form>
 </header>
 <main>
-    <p>
-    <div class="Breadcrumbs" id="Breadcrumbs">
-        <a href="../../index.html">Home</a>
-        »
-        <a href="About.html">About</a>
-    </div>
-    </p>
+
    
 </main>
 <footer>
