--- a/project web/untitled2/pages/Product/Tripod.html
+++ b/project web/untitled2/pages/Product/Tripod.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Tripod</title>
     <style>
         ul {
             list-style-type: none;
@@ -58,8 +58,9 @@
     </div>
     <h1 class="h1">
         Photo Op
-        <hr class="h1"/>
     </h1>
+    <br><br><br>
+    <hr>
     <form method="GET" action="" class="search">
         <label for="search-field"></label><input id="search-field" type="text" name="Search" placeholder="Search">
         <input type="submit" value="Search" class="search">
@@ -67,10 +68,12 @@
 </header>
 <main>
     <p>
-    <div class="Breadcrumbs" id="Breadcrumbs">
-        <a href="../../index.html">Home</a>
+    <div class="Breadcrumbs" >
+        <a href="http://localhost:63342/web/project%20web/untitled2/pages/Home/Home.html?_ijt=k5hlpb6ckroc5hf5jsr00f7ft9 ">Home</a>
         »
-        <a href="About.html">About</a>
+        <a href="http://localhost:63342/web/project%20web/untitled2/pages/Catalog/Catalog.html?_ijt=3jsrhoebi5rr8vpjcqvmikc7gb ">Catalog</a>
+        »
+        <a href="http://localhost:63342/web/project%20web/untitled2/pages/Product/Tripod.html?_ijt=45q3kap2g8a0pllsn1p8218kaa ">Tripod</a>
     </div>
     </p>
 <p class="prodName">
@@ -97,6 +100,9 @@
         BUY NOW
     </button>
 </p>
+    <!--הוספנו רווחים על מנת שהפוטר לא יסתיר חלק מהתכנים-->
+    <br><br>
+    <hr>
 </main>
 <footer>
     <div class="footer">
