--- a/project web/untitled2/pages/About/About.html
+++ b/project web/untitled2/pages/About/About.html
@@ -5,7 +5,7 @@
     <meta name="Photo Op" content="Photography">
     <meta name="keywords" content="DSLR,Camera,Photo,Painting with light">
     <meta name="author" content="Amit Nachmias">
-    <title> Photo Op</title>
+    <title> About</title>
     <style>
         ul {
             list-style-type: none;
@@ -64,21 +64,23 @@
     </div>
     <h1 class="h1">
         Photo Op
-        <hr class="h1"/>
     </h1>
+    <br><br><br>
+    <hr>
     <form method="GET" action="" class="search">
         <label for="search-field"></label><input id="search-field" type="text" name="Search" placeholder="Search">
         <input type="submit" value="Search" class="search">
     </form>
-</header>
-<main>
     <p>
-    <div class="Breadcrumbs" id="Breadcrumbs">
-        <a href="../../index.html">Home</a>
+    <div class="Breadcrumbs" >
+        <a href="http://localhost:63342/web/project%20web/untitled2/pages/Home/Home.html?_ijt=k5hlpb6ckroc5hf5jsr00f7ft9 ">Home</a>
         »
-        <a href="About.html">About</a>
+        <a href="http://localhost:63342/web/project%20web/untitled2/pages/About/About.html?_ijt=45q3kap2g8a0pllsn1p8218kaa ">About</a>
     </div>
     </p>
+</header>
+<main>
+  <br>
     <div>
         Photography is the art, application and practice of creating durable images by recording light or other
         electromagnetic radiation, either electronically by means of an image sensor, or chemically by means of a
