--- a/project web/untitled2/pages/About/About.html
+++ b/project web/untitled2/pages/About/About.html
@@ -52,7 +52,7 @@
                 <a href="http://localhost:63342/web/project%20web/untitled2/pages/Catalog/Catalog.html?_ijt=3jsrhoebi5rr8vpjcqvmikc7gb  ">Catalog</a>
             </li>
             <li><a href="http://www.canonoutsideofauto.ca/play/">Exposure Meter Simulator</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="http://localhost:63342/web/project%20web/untitled2/pages/Contact/Contact.html?_ijt=igvjfh9v0v3pabihig2h91kda2">Contact</a></li>
             <li><a class="active"
                    href="http://localhost:63342/web/project%20web/untitled2/pages/About/About.html?_ijt=3jsrhoebi5rr8vpjcqvmikc7gb ">About</a>
             </li>
@@ -162,7 +162,7 @@
 
 <footer>
     <div class="footer">
-        <a href="Contact.html">Contact</a>
+        <a href="http://localhost:63342/web/project%20web/untitled2/pages/Contact/Contact.html?_ijt=igvjfh9v0v3pabihig2h91kda2">Contact</a>
     </div>
 </footer>
 </body>
