--- a/project web/untitled2/pages/Contact/Contact.html
+++ b/project web/untitled2/pages/Contact/Contact.html
@@ -42,19 +42,11 @@
 <header>
     <div class="topnav">
         <ul>
-            <li>
-                <a href="http://localhost:63342/web/project%20web/untitled2/pages/Home/Home.html?_ijt=f974ndo89otffqgosthq9pvjr">Home</a>
-            </li>
-            <li>
-                <a href="http://localhost:63342/web/project%20web/untitled2/pages/Catalog/Catalog.html?_ijt=3jsrhoebi5rr8vpjcqvmikc7gb">Catalog</a>
-            </li>
+            <li><a href="http://localhost:63342/web/project%20web/untitled2/pages/Home/Home.html?_ijt=f974ndo89otffqgosthq9pvjr">Home</a></li>
+            <li><a href="http://localhost:63342/web/project%20web/untitled2/pages/Catalog/Catalog.html?_ijt=3jsrhoebi5rr8vpjcqvmikc7gb">Catalog</a></li>
+            <li><a class="active" href="http://localhost:63342/web/project%20web/untitled2/pages/Contact/Contact.html?_ijt=igvjfh9v0v3pabihig2h91kda2">Contact</a></li>
+            <li><a href="http://localhost:63342/web/project%20web/untitled2/pages/About/About.html?_ijt=3jsrhoebi5rr8vpjcqvmikc7gb">About</a></li>
             <li><a href="http://www.canonoutsideofauto.ca/play/">Exposure Meter Simulator</a></li>
-            <li><a class="active"
-                   href="http://localhost:63342/web/project%20web/untitled2/pages/Contact/Contact.html?_ijt=igvjfh9v0v3pabihig2h91kda2">Contact</a>
-            </li>
-            <li>
-                <a href="http://localhost:63342/web/project%20web/untitled2/pages/About/About.html?_ijt=3jsrhoebi5rr8vpjcqvmikc7gb">About</a>
-            </li>
         </ul>
     </div>
     <div class="login-container">
