--- a/project web/untitled2/pages/Product/SLR.html
+++ b/project web/untitled2/pages/Product/SLR.html
@@ -42,17 +42,16 @@
         <ul>
             <li><a href="http://localhost:63342/web/project%20web/untitled2/pages/Home/Home.html?_ijt=k5hlpb6ckroc5hf5jsr00f7ft9">Home</a></li>
             <li><a class="active" href="http://localhost:63342/web/project%20web/untitled2/pages/Catalog/Catalog.html?_ijt=3jsrhoebi5rr8vpjcqvmikc7gb">Catalog</a> </li>
-            <li><a href="http://www.canonoutsideofauto.ca/play/">Exposure Meter Simulator</a></li>
             <li><a href="http://localhost:63342/web/project%20web/untitled2/pages/Contact/Contact.html?_ijt=igvjfh9v0v3pabihig2h91kda2">Contact</a></li>
             <li><a href="http://localhost:63342/web/project%20web/untitled2/pages/About/About.html?_ijt=3jsrhoebi5rr8vpjcqvmikc7gb">About</a></li>
-        
+            <li><a href="http://www.canonoutsideofauto.ca/play/">Exposure Meter Simulator</a></li>
         
         </ul>
     </div>
     <div class="login-container">
         <form action="/action_page.php">
-            <input type="text" placeholder="Username" name="username">
-            <input type="text" placeholder="Password" name="psw">
+            <input type="text" placeholder="Username" name="username" required>
+            <input type="text" placeholder="Password" name="psw" required>
             <button class="login" type="submit">Login</button>
         </form>
     </div>
