--- a/project web/untitled2/pages/Catalog/Catalog.html
+++ b/project web/untitled2/pages/Catalog/Catalog.html
@@ -47,14 +47,14 @@
             <li><a class="active" href="http://localhost:63342/web/project%20web/untitled2/pages/Catalog/Catalog.html?_ijt=3jsrhoebi5rr8vpjcqvmikc7gb">Catalog</a> </li>
             <li><a href="http://localhost:63342/web/project%20web/untitled2/pages/Contact/Contact.html?_ijt=igvjfh9v0v3pabihig2h91kda2">Contact</a></li>
             <li><a  href="http://localhost:63342/web/project%20web/untitled2/pages/About/About.html?_ijt=3jsrhoebi5rr8vpjcqvmikc7gb">About</a></li>
-            <li><a href="http://www.canonoutsideofauto.ca/play/">Exposure Meter Simulator</a></li>
+            <li><a target="_blank" href="http://www.canonoutsideofauto.ca/play/">Exposure Meter Simulator</a></li>
         
         </ul>
     </div>
     <div class="login-container">
         <form action="/action_page.php">
             <input type="text" placeholder="Username" name="username" required>
-            <input type="text" placeholder="Password" name="psw" required>
+            <input type="password" placeholder="Password" name="psw" required>
             <button class="login" type="submit">Login</button>
         </form>
     </div>
@@ -121,6 +121,20 @@
         </a>
     </div>
     
+    <div class="gallery">
+        <a  href="http://localhost:63342/web/project%20web/untitled2/pages/Product/Lens.html?_ijt=g7a7u5k42q5ds7kv8fmhrqo4r3">
+            <div class="dropdown">
+                <img src="https://img.vistek.net/prodimg/large/424349.jpg" alt="DSLR" width="200" height="150">
+                <div class="dropdown-content">
+                    <img src="https://img.vistek.net/prodimg/large/424349.jpg" alt="DSLR" width="400" height="300">
+                    <div class="desc">Lens - The important item in the camera.
+                        <br>
+                        <hr>
+                        Price - 80$</div>
+                </div>
+            </div>
+        </a>
+    </div>
     <!--הוספנו רווחים על מנת שהפוטר לא יסתיר חלק מהתכנים-->
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <hr>
