--- a/project web/untitled2/pages/Contact/Contact.html
+++ b/project web/untitled2/pages/Contact/Contact.html
@@ -46,13 +46,13 @@
             <li><a href="http://localhost:63342/web/project%20web/untitled2/pages/Catalog/Catalog.html?_ijt=3jsrhoebi5rr8vpjcqvmikc7gb">Catalog</a></li>
             <li><a class="active" href="http://localhost:63342/web/project%20web/untitled2/pages/Contact/Contact.html?_ijt=igvjfh9v0v3pabihig2h91kda2">Contact</a></li>
             <li><a href="http://localhost:63342/web/project%20web/untitled2/pages/About/About.html?_ijt=3jsrhoebi5rr8vpjcqvmikc7gb">About</a></li>
-            <li><a href="http://www.canonoutsideofauto.ca/play/">Exposure Meter Simulator</a></li>
+            <li><a target="_blank" href="http://www.canonoutsideofauto.ca/play/">Exposure Meter Simulator</a></li>
         </ul>
     </div>
     <div class="login-container">
         <form action="/action_page.php">
             <input type="text" placeholder="Username" name="username" required>
-            <input type="text" placeholder="Password" name="psw" required>
+            <input type="password" placeholder="Password" name="psw" required>
             <button class="login" type="submit">Login</button>
         </form>
     </div>
