--- a/project web/untitled2/pages/Product/Lens.html
+++ b/project web/untitled2/pages/Product/Lens.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>SLR</title>
+    <title>Lens</title>
     <style>
         ul {
             list-style-type: none;
@@ -40,7 +40,7 @@
 <header>
     <div class="topnav">
         <ul>
-            <li><a href="http://localhost:63342/web/project%20web/untitled2/pages/Home/Home.html?_ijt=k5hlpb6ckroc5hf5jsr00f7ft9">Home</a></li>
+            <li><a href="http://localhost:63342/web/project%20web/untitled2/pages/Home/Home.html?_ijt=k5hlpb6ckroc5hf5jsr00f7ft9 ">Home</a></li>
             <li><a class="active" href="http://localhost:63342/web/project%20web/untitled2/pages/Catalog/Catalog.html?_ijt=3jsrhoebi5rr8vpjcqvmikc7gb">Catalog</a> </li>
             <li><a href="http://localhost:63342/web/project%20web/untitled2/pages/Contact/Contact.html?_ijt=igvjfh9v0v3pabihig2h91kda2">Contact</a></li>
             <li><a href="http://localhost:63342/web/project%20web/untitled2/pages/About/About.html?_ijt=3jsrhoebi5rr8vpjcqvmikc7gb">About</a></li>
@@ -72,33 +72,33 @@
         »
         <a href="http://localhost:63342/web/project%20web/untitled2/pages/Catalog/Catalog.html?_ijt=3jsrhoebi5rr8vpjcqvmikc7gb ">Catalog</a>
         »
-        <a href="http://localhost:63342/web/project%20web/untitled2/pages/Product/SLR.html?_ijt=45q3kap2g8a0pllsn1p8218kaa ">SLR</a>
+        <a href="http://localhost:63342/web/project%20web/untitled2/pages/Product/Lens.html?_ijt=g7a7u5k42q5ds7kv8fmhrqo4r3 ">Lens</a>
     </div>
     </p>
-<p class="prodName" style="left: 38%">
-     Single Lense Reflex
-</p>
-<div>
-    <img class="images" url
-         src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f7/Minolta_XD-11.jpg/300px-Minolta_XD-11.jpg"
-         id="camera2"
-         width="900" height="470" alt="SLR Camera">
-</div>
-<h2 class="h2">
-    Description:
-</h2>
-<p class="desc">
-    This is the best camera from the ancient world! you should buy it right now.
-    <br>
-    Please notice that this is not a digital type of a camera.
-    <br>
-    Brief learning beforehand is recommended.
-</p>
-<p>
-    <button class="buy">
-        BUY NOW
-    </button>
-</p>
+    <p class="prodName" style="left: 40%">
+        Camera's Lens
+    </p>
+    <div>
+        <img class="images" url
+             src="https://img.vistek.net/prodimg/large/424349.jpg"
+             id="camera2"
+             width="600" height="500" alt="Lens">
+    </div>
+    <h2 class="h2">
+        Description:
+    </h2>
+    <p class="desc">
+        This is the best camera in the world! you should buy it right now.
+        <br>
+        Please notice that this is the digital type of a camera.
+        <br>
+        Brief learning beforehand is recommended!
+    </p>
+    <p>
+        <button class="buy">
+            BUY NOW
+        </button>
+    </p>
     <!--הוספנו רווחים על מנת שהפוטר לא יסתיר חלק מהתכנים-->
     <br><br>
     <hr>
