--- a/project web/untitled2/pages/Home/Home.html
+++ b/project web/untitled2/pages/Home/Home.html
@@ -38,6 +38,7 @@
         }
     </style>
     <link rel="stylesheet" href="../total.css">
+    <link rel="stylesheet" href="Home.css">
 </head>
 <body>
 <header>
