--- a/project web/untitled2/pages/About/About.html
+++ b/project web/untitled2/pages/About/About.html
@@ -157,7 +157,7 @@
         <br/>
         <br/>
         <div>
-            <a class="btn" href="https://www.youtube.com/watch?v=5I-bOBsQT74">Click Here!</a>
+            <a class="btn" target="_blank" href="https://www.youtube.com/watch?v=5I-bOBsQT74">Click Here!</a>
         </div>
         <br/>
     </div>
