--- a/project web/untitled2/pages/Catalog/Catalog.html
+++ b/project web/untitled2/pages/Catalog/Catalog.html
@@ -100,7 +100,7 @@
                     <div class="desc">SLR - Single Lense Reflex.
                         <br>
                         <hr>
-                        Price - 100$</div>
+                        Price - 100$ bktt</div>
                 </div>
             </div>
         </a>
