link test home page

--- a/project web/untitled2/pages/Catalog/Catalog.html
+++ b/project web/untitled2/pages/Catalog/Catalog.html
@@ -43,6 +43,7 @@
 <header>
     <div class="topnav">
         <ul>
+            <li><a href="../Home/Home.html">Home</a></li>
             <li><a href="http://localhost:63342/web/project%20web/untitled2/pages/Home/Home.html?_ijt=k5hlpb6ckroc5hf5jsr00f7ft9 ">Home</a></li>
             <li><a class="active" href="http://localhost:63342/web/project%20web/untitled2/pages/Catalog/Catalog.html?_ijt=3jsrhoebi5rr8vpjcqvmikc7gb">Catalog</a> </li>
             <li><a href="http://localhost:63342/web/project%20web/untitled2/pages/Contact/Contact.html?_ijt=igvjfh9v0v3pabihig2h91kda2">Contact</a></li>
