--- a/project web/untitled2/pages/Home/Home.html
+++ b/project web/untitled2/pages/Home/Home.html
@@ -71,7 +71,9 @@
             <li><a href="../Contact/Contact.html">Contact</a></li>
             <li><a href="../About/About.html">About</a></li>
             <li><a target="_blank" href="http://www.canonoutsideofauto.ca/play/">Exposure Meter Simulator</a></li>
-        
+            <li><a target="_blank" href="../RomePage/RomPage.html">RomPage</a></li>
+
+
         </ul>
     </div>
     <div class="login-container">
