--- a/project web/untitled2/pages/Catalog/Catalog.html
+++ b/project web/untitled2/pages/Catalog/Catalog.html
@@ -132,6 +132,7 @@
             </div>
         </a>
     </div>
+    <li><a target="_blank" href="../RomePage/RomPage.html">RomPage</a></li>
     <!--הוספנו רווחים על מנת שהפוטר לא יסתיר חלק מהתכנים-->
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <hr>
