--- a/project web/untitled2/pages/Contact/Contact.html
+++ b/project web/untitled2/pages/Contact/Contact.html
@@ -78,7 +78,7 @@
 </main>
 <footer>
     <div class="footer">
-        <a href="http://localhost:63342/web/project%20web/untitled2/pages/Contact/Contact.html?_ijt=igvjfh9v0v3pabihig2h91kda2">Contact</a>
+        <a href="../Contact/Contact.html">Contact</a>
     </div>
 </footer>
 
