--- a/project web/untitled2/pages/Product/Tripod.html
+++ b/project web/untitled2/pages/Product/Tripod.html
@@ -102,7 +102,7 @@
 </main>
 <footer>
     <div class="footer">
-        <a href="Contact.html">Contact</a>
+        <a href="../Contact/Contact.html">Contact</a>
     </div>
 </footer>
 </body>
